// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executive summary budget component DollarCell renders correctly 1`] = `
<td
  className="budget-table--number "
  headers="one two three"
>
  <Dollars>
    32.57
  </Dollars>
</td>
`;

exports[`executive summary budget component DollarCell renders correctly 2`] = `
<td
  className="budget-table--number "
  headers="one two three"
>
  <Dollars>
    75.23
  </Dollars>
</td>
`;

exports[`executive summary budget component renders correctly with data 1`] = `
<Fragment>
  <table
    className="budget-table"
  >
    <caption
      className="ds-h4"
    >
      HIT + HIE
       
      <span
        className="ds-u-visibility--screen-reader"
      >
        executive summary
      </span>
    </caption>
    <thead>
      <tr
        className="budget-table--row__highlight-gray-dark"
      >
        <td
          className="th"
          id="program-budget-table-null1"
        />
        <th
          colSpan="2"
          id="program-budget-table-hit"
        >
          HIT (90/10)
        </th>
        <th
          colSpan="2"
          id="program-budget-table-hie"
        >
          HIE (90/10)
        </th>
        <th
          colSpan="3"
          id="program-budget-table-combined"
        >
          HIT + HIE (90/10)
        </th>
      </tr>
      <tr
        className="budget-table--row__highlight-gray-light"
      >
        <td
          className="th"
          id="program-budget-table-null2"
        />
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hit-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hit-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hie-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-hie-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-combined-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-combined-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-combined-total"
        >
          Total Computable Medicaid Cost
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        key="1"
      >
        <th
          headers="program-budget-table-null1 program-budget-table-null2"
          scope="row"
        >
          FFY 1
        </th>
        <DollarCell
          className=""
          headers="program-budget-table-hit program-budget-table-hit-fed"
          value={1}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hit program-budget-table-hit-state"
          value={2}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hie program-budget-table-hie-fed"
          value={10}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hie program-budget-table-hie-state"
          value={20}
        />
        <DollarCell
          className=""
          headers="program-budget-table-combined program-budget-table-combined-fed"
          value={100}
        />
        <DollarCell
          className=""
          headers="program-budget-table-combined program-budget-table-combined-state"
          value={200}
        />
        <DollarCell
          className="budget-table--cell__hightlight-lighter"
          headers="program-budget-table-combined program-budget-table-combined-total"
          value={300}
        />
      </tr>
      <tr
        className=""
        key="2"
      >
        <th
          headers="program-budget-table-null1 program-budget-table-null2"
          scope="row"
        >
          FFY 2
        </th>
        <DollarCell
          className=""
          headers="program-budget-table-hit program-budget-table-hit-fed"
          value={3}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hit program-budget-table-hit-state"
          value={4}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hie program-budget-table-hie-fed"
          value={30}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hie program-budget-table-hie-state"
          value={40}
        />
        <DollarCell
          className=""
          headers="program-budget-table-combined program-budget-table-combined-fed"
          value={400}
        />
        <DollarCell
          className=""
          headers="program-budget-table-combined program-budget-table-combined-state"
          value={500}
        />
        <DollarCell
          className="budget-table--cell__hightlight-lighter"
          headers="program-budget-table-combined program-budget-table-combined-total"
          value={700}
        />
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight-lighter"
        key="total"
      >
        <th
          headers="program-budget-table-null1 program-budget-table-null2"
          scope="row"
        >
          Total
        </th>
        <DollarCell
          className=""
          headers="program-budget-table-hit program-budget-table-hit-fed"
          value={5}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hit program-budget-table-hit-state"
          value={6}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hie program-budget-table-hie-fed"
          value={50}
        />
        <DollarCell
          className=""
          headers="program-budget-table-hie program-budget-table-hie-state"
          value={60}
        />
        <DollarCell
          className=""
          headers="program-budget-table-combined program-budget-table-combined-fed"
          value={700}
        />
        <DollarCell
          className=""
          headers="program-budget-table-combined program-budget-table-combined-state"
          value={800}
        />
        <DollarCell
          className="budget-table--cell__hightlight-lighter"
          headers="program-budget-table-combined program-budget-table-combined-total"
          value={1500}
        />
      </tr>
    </tbody>
  </table>
  <table
    className="budget-table"
  >
    <caption
      className="ds-h4"
    >
      MMIS
       
      <span
        className="ds-u-visibility--screen-reader"
      >
        executive summary
      </span>
    </caption>
    <thead>
      <tr
        className="budget-table--row__highlight-gray-dark"
      >
        <td
          className="th"
          id="program-budget-table-null3"
        />
        <th
          colSpan="2"
          id="program-budget-table-mmis90"
        >
          MMIS (90/10)
        </th>
        <th
          colSpan="2"
          id="program-budget-table-mmis75"
        >
          MMIS (75/25)
        </th>
        <th
          colSpan="2"
          id="program-budget-table-mmis50"
        >
          MMIS (50/50)
        </th>
        <th
          colSpan="3"
          id="program-budget-table-mmisTotal"
        >
          MMIS (Total)
        </th>
      </tr>
      <tr
        className="budget-table--row__highlight-gray-light"
      >
        <td
          className="th"
          id="program-budget-table-null4"
        />
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis90-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis90-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis75-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis75-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis50-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmis50-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmisTotal-fed"
        >
          Federal
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmisTotal-state"
        >
          State
        </th>
        <th
          className="ds-u-text-align--right"
          id="program-budget-table-mmisTotal-total"
        >
          Total Computable Medicaid Cost
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        key="1"
      >
        <th
          headers="program-budget-table-null3 program-budget-table-null4"
          scope="row"
        >
          FFY 1
        </th>
        <DollarCell
          className=""
          headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
          value={1}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
          value={2}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
          value={10}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
          value={20}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
          value={100}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
          value={200}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
          value={1000}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
          value={2000}
        />
        <DollarCell
          className="budget-table--cell__hightlight-lighter"
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-total"
          value={3000}
        />
      </tr>
      <tr
        className=""
        key="2"
      >
        <th
          headers="program-budget-table-null3 program-budget-table-null4"
          scope="row"
        >
          FFY 2
        </th>
        <DollarCell
          className=""
          headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
          value={3}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
          value={4}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
          value={30}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
          value={40}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
          value={300}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
          value={400}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
          value={4000}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
          value={5000}
        />
        <DollarCell
          className="budget-table--cell__hightlight-lighter"
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-total"
          value={9000}
        />
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight-lighter"
        key="total"
      >
        <th
          headers="program-budget-table-null3 program-budget-table-null4"
          scope="row"
        >
          Total
        </th>
        <DollarCell
          className=""
          headers="program-budget-table-mmis90 program-budget-table-mmis90-fed"
          value={5}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis90 program-budget-table-mmis90-state"
          value={6}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis75 program-budget-table-mmis75-fed"
          value={50}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis75 program-budget-table-mmis75-state"
          value={60}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis50 program-budget-table-mmis50-fed"
          value={500}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmis50 program-budget-table-mmis50-state"
          value={600}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-fed"
          value={7000}
        />
        <DollarCell
          className=""
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-state"
          value={8000}
        />
        <DollarCell
          className="budget-table--cell__hightlight-lighter"
          headers="program-budget-table-mmisTotal program-budget-table-mmisTotal-total"
          value={15000}
        />
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`executive summary budget component renders correctly without data 1`] = `""`;
